# nexi

./: LICENSE  README.md  pyproject.toml
src/nexi/: __about__.py  __init__.py  __main__.py  estimate_nexi.py  estimate_nexi_noiseless.py
src/nexi/models/: microstructure_models.py  nexi.py  nexi_rm.py
src/nexi/models/functions/: nexi_functions.py  rician_mean.py
src/nexi/models/parameters/: acq_parameters.py  mist_parameters.py  save_parameters.py
src/nexi/nls/: gridsearch.py  nls.py
src/nexi/powderaverage/: powderaverage.py
tests/: __init__.py
tests/nexi/: generate_phantom.py  test_estimate_nexi.py  test_estimate_nexi_noiseless.py
tests/nexi/data/: phantom.bval  phantom.td  powderaverage_ref.bval  powderaverage_ref.td
tests/nexi/models/functions/: test_nexi_functions.py  test_rician_mean.py
tests/nexi/powderaverage/: test_powderaverage.py
